C2: opaque unsafe access triggers an assert

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b129
    • Verified

        The following code hits an assert during compilation:
            static int test(Object o) {
                return UNSAFE.getInt(o, F_OFFSET);
            }

        # Internal Error (/Users/vlivanov/ws/jdk/hs-comp9/hotspot/src/share/vm/opto/library_call.cpp:2426), pid=12063, tid=23043
        # assert(alias_type->adr_type() == TypeRawPtr::BOTTOM || alias_type->adr_type() == TypeOopPtr::BOTTOM || alias_type->basic_type() != T_ILLEGAL) failed: field, array element or unknown

              Assignee:
              Vladimir Ivanov
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              18 Start watching this issue

                Created:
                Updated:
                Resolved: