8155781: C2: opaque unsafe access triggers an assert Reviewed-by: kvn, thartmann